--- a/vue_studentmanagement/public/css/style.css
+++ b/vue_studentmanagement/public/css/style.css
@@ -50,6 +50,20 @@ ol, ul {
   background: #343F4F;
   animation: typing 3s steps(10) infinite;
 }
+.link{
+  
+  color: white;
+  text-decoration: none;
+  font-size: 25px;
+  margin-bottom: 5px;
+}
+/* .carousel-inner > .carousel-item > img {
+  height:360px;
+} */
+.w-100 {
+  width: 100% !important;
+  height: 75vh;
+}
 @keyframes typing {
   40%, 60%{
     left: calc(100% + 30px);
@@ -58,3 +72,4 @@ ol, ul {
     left: 0;
   }
 }
+
